fix(accordion): L3-4103 fix spacing on accordion content (#374)

--- a/src/components/Accordion/_accordion.scss
+++ b/src/components/Accordion/_accordion.scss
@@ -23,10 +23,12 @@
     height: auto;
   }
 
+  &__content {
+    margin: $spacing-sm 0;
+  }
+
   &__content--lg {
     @include text($body2);
-
-    margin: 1.25rem 0;
   }
 
   &--transition {
